--- a/.gitignore
+++ b/.gitignore
@@ -121,9 +121,9 @@ celerybeat.pid
 
 # Environments
 .env
-.venv
+.mynetwork
 env/
-venv/
+mynetwork/
 ENV/
 env.bak/
 venv.bak/
@@ -156,5 +156,6 @@ cython_debug/
 #  JetBrains specific template is maintained in a separate JetBrains.gitignore that can
 #  be found at https://github.com/github/gitignore/blob/main/Global/JetBrains.gitignore
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
-#  option (not recommended) you can uncomment the following to ignore the entire idea folder.
+#  option:wq
+#  : (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
